--- a/BDMatchUI/MainWindow.xaml
+++ b/BDMatchUI/MainWindow.xaml
@@ -7,7 +7,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Closed="MainWindow_Closed">
+    Closed="MainWindow_Closed"
+    SizeChanged="MainWindow_SizeChanged">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -19,7 +20,7 @@
             <Image x:Name="AppFontIcon"
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Center"
-                Source="Assets/Square44x44Logo.png"
+                Source="Assets/Square44x44Logo.scale-200.png"
                 Width="40" 
                 Height="40"
                 Margin="5, 2, 0, 0"/>
